efk/elasticsearch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  namespace: logging
  labels:
    app: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: elastic/elasticsearch:7.17.23
          ports:
            - containerPort: 9200
            - containerPort: 9300
          volumeMounts:
            - name: elastic-data
              mountPath: /usr/share/elasticsearch/data
      volumes:
        - name: elastic-data
          emptyDir:
            sizeLimit: 5Gi

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: elasticsearch
  name: elasticsearch-svc
  namespace: logging
spec:
  ports:
    - name: elasticsearch
      port: 9200
      protocol: TCP
      targetPort: 9200
    - name: elasticsearch-nodecom
      port: 9300
      protocol: TCP
      targetPort: 9300
  selector:
    app: elasticsearch
  type: ClusterIP
