efk/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: efk-ingress
  namespace: logging
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - host: efk.o-r.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-svc
                port:
                  name: http
